Changes for 1.6.2

 - [ZBX-395] fixed item list for simple graph (Artem)
 - [ZBX-334] added sorting to group list in elements copy form (Artem)
 - [ZBX-509] fixed problem with user rights to hostgroup without any host (Artem)
 - [ZBX-564] added more descriptive message on conflict of templates (Artem)
 - [ZBX-443] removed excess space after detail messages (Artem)
 - [ZBX-526] fixed graphs on screens not getting refreshed issue (Artem)
 - [ZBX-531] fixed plain text line wrapping (Artem)
 - [ZBX-551] updated german language file (Artem)
 - [ZBX-554] added proxy host info in export/import (Artem)
 - [ZBX-638] fixed deleting applications on host remove (Artem)
 - [ZBX-636] removed "Keep trends (in days)" from Item Configuration form if "Type of information" is Character, Log or Text (Artem)
 - [ZBX-608] added sorting to templates column in hosts screen (Artem)
 - [ZBX-635] improved escalations to stop if host, item or trigger is disabled (Sasha)
 - [ZBX-632] fixed sql query in map elements configuration form (Artem)
 - [ZBX-631] fixed incorrect incoming string values if using dbcache (Sasha)
 - [ZBX-630] improved log files view in BB theme (Artem)
 - [ZBX-629] fixed sql error in popup window (Artem)
 - [DEV-271] fixed graphs out of bounds problem (Artem)
 - [ZBX-628] fixed memory leak in proxy module (Sasha)
 - [ZBX-611] fixed undefined variables in installation wizard (Artem)
 - [ZBX-612] fixed possible incorrect value for host (Artem)
 - [ZBX-627] fixed items update (Artem)
 - [ZBX-625] fixed possible incorrect processing of delta for integers if using dbcache (Sasha)
 - [DEV-273] added mass update for IPMI fields (Sasha)
 - [DEV-272] added support of {HOSTNAME}, {HOST.CONN}... macros for "IPMI IP address" (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers(Sasha)
 - [ZBX-622] fixed broked autocreation of SQLite database (Alexei)
 - [ZBX-621] fixed bad performance of the graph related screen due to missing index (Alexei)